test/Fail/Issue6173.err
Issue6173.agda:4.1-24: error: [ModuleNameUnexpected]
The name of the top level module does not match the file name. The
unnamed module
(Issue6173/Import.agda:1.1) should
probably be named Issue6173.Import
when scope checking the declaration
  import Issue6173.Import
